--- a/EasyWire/Dockerfile
+++ b/EasyWire/Dockerfile
@@ -1,8 +1,12 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
+USER $APP_ID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 5000 51820/udp
+
+RUN apt-get update && apt-get install -y \
+    iproute2 \
+    wireguard-tools \
+    && rm -rf /var/lib/apt/lists/*
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
