--- a/EasyWire/EasyWire.csproj
+++ b/EasyWire/EasyWire.csproj
@@ -4,6 +4,18 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MudBlazor" Version="7.2.0" />
+      <PackageReference Include="QRCoder" Version="1.6.0" />
+    </ItemGroup>
 
 </Project>
