--- a/EasyWire/Dockerfile
+++ b/EasyWire/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y \
     iproute2 \
     wireguard-tools \
     && rm -rf /var/lib/apt/lists/*
+RUN mkdir /app/keys && chown $APP_UID:$APP_UID /app/keys
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
