--- a/EasyWire/EasyWire.csproj
+++ b/EasyWire/EasyWire.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="MudBlazor" Version="7.2.0" />
+      <PackageReference Include="MudBlazor.ThemeManager" Version="2.0.0" />
       <PackageReference Include="QRCoder" Version="1.6.0" />
     </ItemGroup>
 
