Modified app so Password is stored no where other than Dockerfile.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,11 +4,11 @@
       context: .
       dockerfile: EasyWire/Dockerfile
     ports:
-      - "4444:8080"
+      - "5000:8080"
       - "51820:51820/udp"
     environment:
-      - WG_HOST=CHANGE_ME
-      - PASSWORD=CHANGE_ME
+      - HOST=
+      - PASSWORD=
     cap_add:
       - NET_ADMIN
     sysctls:
@@ -16,7 +16,7 @@
     volumes:
       - wireguard_config:/etc/wireguard
       - easywire_keys:/app/keys
-    restart: unless-stopped
+    # restart: unless-stopped
     
 volumes:
   wireguard_config:
